Bug 226784 Caret display problems with Korean input methods in Windows r=VYV03354+ere, sr=roc